--- a/src/pages/leadership.astro
+++ b/src/pages/leadership.astro
@@ -24,8 +24,8 @@ const metadata = {
       <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Mike Johnston</h3>
       <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-2xl mb-2">Senior Pastor</h2>
       <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-1xl mb-2">
-        <a href="mailto:pastormike@pleasanthome.cc"
-          ><Icon name="tabler:mail" class="w-5 h-5 inline" /> pastormike@pleasanthome.cc</a
+        <a href="mailto:pastormike@phccgresham.org"
+          ><Icon name="tabler:mail" class="w-5 h-5 inline" /> pastormike@phccgresham.org</a
         >
       </h2><br />
       Pastor Mike began serving at Pleasant Home Community Church in September 2017. He and his wife, Katy were married in
@@ -49,8 +49,8 @@ const metadata = {
       <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Ryan Wethern</h3>
       <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-2xl mb-2">Associate Pastor</h2>
       <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-1xl mb-2">
-        <a href="mailto:pastorryan@pleasanthome.cc"
-          ><Icon name="tabler:mail" class="w-5 h-5 inline" /> pastorryan@pleasanthome.cc</a
+        <a href="mailto:pastorryan@phccgresham.org"
+          ><Icon name="tabler:mail" class="w-5 h-5 inline" /> pastorryan@phccgresham.org</a
         >
       </h2><br />
       Pastor Ryan came to PHCC in February 2021. He and his wife, Becky, have been married since January 2006, and they have
@@ -80,8 +80,8 @@ const metadata = {
       <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Jason Evans</h3>
       <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-2xl mb-2">Youth Pastor</h2>
       <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-1xl mb-2">
-        <a href="mailto:pastorjason@pleasanthome.cc"
-          ><Icon name="tabler:mail" class="w-5 h-5 inline" /> pastorjason@pleasanthome.cc</a
+        <a href="mailto:pastorjason@phccgresham.org"
+          ><Icon name="tabler:mail" class="w-5 h-5 inline" /> pastorjason@phccgresham.org</a
         >
       </h2><br />
       Jason has attended PHCC since 2014. He and his wife, Emily, were married in 2009 and have six children. Jason is currently
