--- a/src/pages/give.astro
+++ b/src/pages/give.astro
@@ -17,35 +17,6 @@ const metadata = {
       subtitle="Whoever sows sparingly will also reap sparingly, and whoever sows generously will also reap generously. Each of you should give what you have decided in your heart to give, not reluctantly or under compulsion, for God loves a cheerful giver."
     />
 
-    <!-- items={[
-      {
-        title: 'Give',
-        description: 'You can also text any amount to 84321.',
-        icon: 'flat-color-icons:document',
-        callToAction: {
-          variant: 'primary',
-          text: 'Online',
-          href: 'https://pleasanthome.churchcenter.com/giving',
-        },
-      },
-      {
-        title: 'Volunteer',
-        description: 'We are always in need of help. If you have an interest in serving please contact us.',
-        icon: 'flat-color-icons:template',
-        callToAction: {
-          variant: 'primary',
-          text: 'Contact',
-          href: '/contact',
-        },
-      },
-      {
-        title: 'Pray',
-        description:
-          'Providing customer support for any technical issues related to the templates or their implementation.',
-        icon: 'flat-color-icons:voice-presentation',
-      },
-    ]} -->
-
     <CallToAction
       title="Give"
       subtitle="Thank you for supporting us!<br/>You can also text any amount to 84321."
@@ -54,6 +25,7 @@ const metadata = {
           variant: 'primary',
           text: 'Online',
           href: 'https://pleasanthome.churchcenter.com/giving',
+          target: '_blank',
         },
       ]}
     />
