feat: rename leadership to match old website links

--- a/src/pages/leadership-staff.astro
+++ b/src/pages/leadership-staff.astro
@@ -4,7 +4,7 @@ import Layout from '~/layouts/PageLayout.astro';
 import Content from '~/components/widgets/Content.astro';
 
 const metadata = {
-  title: 'Leadership',
+  title: 'Leadership and Staff',
 };
 ---
 
