--- a/src/pages/speakers/index.astro
+++ b/src/pages/speakers/index.astro
@@ -10,7 +10,7 @@ import { findSermonsBySpeakers } from '~/utils/sermons';
 const speakers = await fetchSpeakers();
 const getLastPreached = speakers.map(async (speaker) => {
   const lastSermon = (await findSermonsBySpeakers([speaker.id]))[0];
-  speaker.lastPreachedDate = lastSermon?.preachDate;
+  speaker.lastPreachedDate = lastSermon?.preachDate ?? new Date(+0);
   return speaker;
 });
 
