--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,9 +61,7 @@ const googleMaps = SITE?.googleMaps;
         tabindex="-1"
         width="200"
         height="40"
-        src="https://embed.sermonaudio.com/button/l/phcc/?color=red&borderless=true&rounded=true"
-        frameborder="0"
-        scrolling="no"></iframe><br />
+        src="https://embed.sermonaudio.com/button/l/phcc/?color=red&borderless=true&rounded=true"></iframe><br />
       <h3 class="text-xl font-bold tracking-tight dark:text-white sm:text-1xl mb-2">Location</h3>
       <span set:html={address} /><br /><span set:html={cityState} />
       <br /><br />
