--- a/src/components/events/UpcomingDay.astro
+++ b/src/components/events/UpcomingDay.astro
@@ -20,7 +20,7 @@ const { day } = Astro.props;
     day.events.map((event) => (
       <tr style="border-bottom-width: 0px;">
         <td style="padding-left: 1rem">{event.allDayEvent ? "All Day" : DateTime.fromJSDate(event.startsAt).setZone("America/Los_Angeles").toFormat("h:mm a")}</td>
-        <td>{event.eventName}</td>
+        <td><a class="prose" href={event.eventUrl} target="_blank">{event.eventName}</a></td>
       </tr>
     ))
   ) : <></>
