--- a/src/components/ministries/BlockGridItem.astro
+++ b/src/components/ministries/BlockGridItem.astro
@@ -57,7 +57,7 @@ const title = item.title;
     {
       link ? (
         <a
-          class="inline-block hover:text-primary dark:hover:text-blue-700 transition ease-in duration-200"
+          class="not-prose inline-block hover:text-primary dark:hover:text-blue-700 transition ease-in duration-200"
           href={link}
           target="_blank"
         >
