--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,6 +57,10 @@ const googleMaps = SITE?.googleMaps;
     <Fragment slot="content">
       <h3 class="text-xl font-bold tracking-tight dark:text-white sm:text-1xl mb-2">Sunday Morning</h3>
       9:00 am, 10:45 am<br /><br />
+      <b>Outside Services</b><br />
+      June 22 - August 31<br />
+      10:30 am<br />
+      <br />
       <iframe
         tabindex="-1"
         width="200"
