feat: update leadership and staff

--- a/src/pages/leadership-staff.astro
+++ b/src/pages/leadership-staff.astro
@@ -36,40 +36,9 @@ const metadata = {
     </Fragment>
   </Content>
 
-  <!-- Pastor Ryan Widget ******************* -->
-
-  <Content
-    image={{
-      src: '~/assets/images/pastor-ryan-wethern-edited.webp',
-      alt: 'Pastor Ryan Wethern and Family',
-      height: 400,
-    }}
-  >
-    <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Ryan Wethern</h3>
-      <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-2xl mb-2">Associate Pastor</h2>
-      <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-1xl mb-2">
-        <a href="mailto:pastorryan@phccgresham.org"
-          ><Icon name="tabler:mail" class="w-5 h-5 inline" /> pastorryan@phccgresham.org</a
-        >
-      </h2><br />
-      Pastor Ryan came to PHCC in February 2021. He and his wife, Becky, have been married since January 2006, and they have
-      four children. From 2006 to 2013, Ryan served in youth ministry in Reno, NV, and it was there that he realized his
-      need for more training. Upon moving to Southern California, Ryan completed his undergraduate degree in Biblical Counseling
-      at The Master's University (2016) and his Master of Divinity at The Master's Seminary (2020). Ryan is ACBC Certified,
-      loves the Word of God, and seeks to teach its sufficiency and power to transform lives. Ryan enjoys basketball, motocross,
-      and playing fun games with his family.
-    </Fragment>
-
-    <Fragment slot="bg">
-      <div class="absolute inset-0 bg-logo-b-l dark:bg-transparent"></div>
-    </Fragment>
-  </Content>
-
   <!-- Pastor Jason Widget ******************* -->
 
   <Content
-    isReversed
     image={{
       src: '~/assets/images/pastor-jason-evans-edited-2.jpg',
       alt: 'Pastor Jason Evans and Family',
@@ -78,7 +47,7 @@ const metadata = {
   >
     <Fragment slot="content">
       <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Jason Evans</h3>
-      <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-2xl mb-2">Youth Pastor</h2>
+      <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-2xl mb-2">Associate Pastor</h2>
       <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-1xl mb-2">
         <a href="mailto:pastorjason@phccgresham.org"
           ><Icon name="tabler:mail" class="w-5 h-5 inline" /> pastorjason@phccgresham.org</a
@@ -87,6 +56,37 @@ const metadata = {
       Jason has attended PHCC since 2014. He and his wife, Emily, were married in 2009 and have six children. Jason is currently
       serving as the Youth Pastor for PHCC. It's his desire to encourage students to build a strong foundation of faith and
       knowledge in God's Word. In his free time, Jason enjoys spending time with his family and being outdoors.
+    </Fragment>
+  </Content>
+
+  <!-- Pastor Travis Widget ******************* -->
+
+  <Content
+    isReversed
+    image={{
+      src: '~/assets/images/pastor-travis-cole.jpg',
+      alt: 'Pastor Travis Cole and Family',
+      height: 550,
+    }}
+  >
+    <Fragment slot="content">
+      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Travis Cole</h3>
+      <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-2xl mb-2">Youth Pastor</h2>
+      <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-1xl mb-2">
+        <a href="mailto:pastortravis@phccgresham.org"
+          ><Icon name="tabler:mail" class="w-5 h-5 inline" /> pastortravis@phccgresham.org</a
+        >
+      </h2><br />
+      Travis joined Pleasant Home Community Church in July 2025. He and his wife, Hannah, were married in June 2016 in Estacada,
+      OR and have three children. Before arriving at Pleasant Home, Travis served in youth ministry and children's ministry
+      in Estacada and Los Angeles. He completed his undergraduate at Portland State University (2017), before receiving his
+      Masters of Divinity from The Master's Seminary (2025). Travis loves to see the power of God's Word transform lives,
+      and he is devoted to help believers deepen their understanding of Scripture and live out their faith. He also enjoys
+      exercise, Ducks football, and discovering good coffee.
+    </Fragment>
+
+    <Fragment slot="bg">
+      <div class="absolute inset-0 bg-logo-b-l dark:bg-transparent"></div>
     </Fragment>
   </Content>
 
@@ -200,7 +200,7 @@ const metadata = {
     image={{
       src: '~/assets/images/staff-barb-isaac-edited.jpg',
       alt: 'Administrative Assistant Barb Isaac and Family',
-      height: 400,
+      height: 275,
     }}
   >
     <Fragment slot="content">
