--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,12 +58,12 @@ const googleMaps = SITE?.googleMaps;
       <h3 class="text-xl font-bold tracking-tight dark:text-white sm:text-1xl mb-2">Sunday Morning</h3>
       9:00 am, 10:45 am<br /><br />
 
-      <b>Outside Services</b><br />
+      <!-- <b>Outside Services</b><br />
       June 22 - August 31<br />
       10:30 am<br /><br />
 
       There will be a limited number of chairs available.<br />
-      Please bring your camp chairs!<br /><br />
+      Please bring your camp chairs!<br /><br /> -->
 
       <iframe
         tabindex="-1"
