--- a/src/pages/leadership-staff.astro
+++ b/src/pages/leadership-staff.astro
@@ -116,34 +116,12 @@ const metadata = {
     </Fragment>
   </Content>
 
-  <!-- Elder Syd Brestel Widget ******************* -->
+  <!-- Elder Mike Garland Widget ******************* -->
 
   <Content
     isReversed
     image={{
-      src: '~/assets/images/elder-syd-brestel-edited.webp',
-      alt: 'Elder Syd Brestel and Family',
-      height: 400,
-    }}
-  >
-    <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Syd Brestel</h3>
-      <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-2xl mb-2">Elder</h2><br />
-      Syd earned his undergraduate degree in New Testament Greek from The Moody Bible Institute in Chicago and a master in
-      Old Testament Literature from Western Seminary in Portland. He has served as lead pastor in four churches over a period
-      of 50 years. His passion is teaching the Bible by encouraging students to “get into the story.” He has authored the
-      book published by Moody Press, God in His Own Image: Loving God for Who He is Not Who We Want Him to Be. Backpacking
-      and fishing were his hobbies. Today he enjoys Sudoku, mentoring men and writing posts for standingonthepromise.com
-      Mary and Syd have two sons, five grandchildren and three great grandchildren. They enjoy living in Troutdale close
-      to grandchildren and great grandchildren.
-    </Fragment>
-  </Content>
-
-  <!-- Elder Mike Garland Widget ******************* -->
-
-  <Content
-    image={{
-      src: '~/assets/images/elder-mike-garland-edited.webp',
+      src: '~/assets/images/elder-mike-garland.png',
       alt: 'Elder Mike Garland and Family',
       height: 400,
     }}
@@ -161,7 +139,6 @@ const metadata = {
   <!-- Elder Jon Felter Widget ******************* -->
 
   <Content
-    isReversed
     image={{
       src: '~/assets/images/elder-jon-feltner-edited.jpg',
       alt: 'Elder Jon Felter and Family',
@@ -177,6 +154,7 @@ const metadata = {
   <!-- Worship Director Rod Eells Widget ******************* -->
 
   <Content
+    isReversed
     image={{
       src: '~/assets/images/worship-rod-eels-edited.webp',
       alt: 'Worship Director Rod Eells and Family',
@@ -184,7 +162,7 @@ const metadata = {
     }}
   >
     <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Rod Eels</h3>
+      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Rod Eells</h3>
       <h2 class="text-1xl font-bold tracking-tight dark:text-white sm:text-2xl mb-2">Worship Director</h2>
     </Fragment>
 
@@ -196,7 +174,6 @@ const metadata = {
   <!-- Administrative Assistant Barb Isaac Widget ******************* -->
 
   <Content
-    isReversed
     image={{
       src: '~/assets/images/staff-barb-isaac-edited.jpg',
       alt: 'Administrative Assistant Barb Isaac and Family',
