fix: disable sermon thumbs due to down service

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -136,5 +136,5 @@ const googleMaps = SITE?.googleMaps;
 
   <!-- Worship Services Widget ******************* -->
 
-  <LatestSermons title="Latest Sermons" />
+  <!-- <LatestSermons title="Latest Sermons" /> -->
 </Layout>
