feat: update leadership photots

--- a/src/pages/leadership-staff.astro
+++ b/src/pages/leadership-staff.astro
@@ -15,7 +15,7 @@ const metadata = {
     isReversed
     title="Leadership and Staff"
     image={{
-      src: '~/assets/images/pastor-mike-johnston.webp',
+      src: '~/assets/images/pastor-mike-johnston.png',
       alt: 'Pastor Mike Johnston and Family',
       height: 400,
     }}
@@ -40,7 +40,7 @@ const metadata = {
 
   <Content
     image={{
-      src: '~/assets/images/pastor-jason-evans-edited-2.jpg',
+      src: '~/assets/images/pastor-jason-evans.png',
       alt: 'Pastor Jason Evans and Family',
       height: 400,
     }}
@@ -64,7 +64,7 @@ const metadata = {
   <Content
     isReversed
     image={{
-      src: '~/assets/images/pastor-travis-cole.jpg',
+      src: '~/assets/images/pastor-travis-cole.png',
       alt: 'Pastor Travis Cole and Family',
       height: 550,
     }}
@@ -140,7 +140,7 @@ const metadata = {
 
   <Content
     image={{
-      src: '~/assets/images/elder-jon-feltner-edited.jpg',
+      src: '~/assets/images/elder-jon-feltner.png',
       alt: 'Elder Jon Felter and Family',
       height: 400,
     }}
