feat: updated elder feltner picture

--- a/src/pages/leadership-staff.astro
+++ b/src/pages/leadership-staff.astro
@@ -140,7 +140,7 @@ const metadata = {
 
   <Content
     image={{
-      src: '~/assets/images/elder-jon-feltner.png',
+      src: '~/assets/images/elder-jon-feltner.jpg',
       alt: 'Elder Jon Felter and Family',
       height: 400,
     }}
